--- a/client/src/app/features/admin/components/roles/role-form-dialog/role-form-dialog.component.scss
+++ b/client/src/app/features/admin/components/roles/role-form-dialog/role-form-dialog.component.scss
@@ -8,6 +8,10 @@ form {
   display: block;
   width: 100%;
   margin-bottom: vars.$spacing-xs;
+
+  textarea {
+    resize: vertical;
+  }
 }
 
 .system-role-warning {
